--- a/humanressourcesApp/humanressourcesApp.vbproj
+++ b/humanressourcesApp/humanressourcesApp.vbproj
@@ -82,11 +82,22 @@
     <Compile Include="Employee Certificate.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Employees List.Designer.vb">
+      <DependentUpon>Employees List.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Employees List.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Employees.Designer.vb">
       <DependentUpon>Employees.vb</DependentUpon>
     </Compile>
     <Compile Include="Employees.vb">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HRappDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HRappDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Leave.Designer.vb">
       <DependentUpon>Leave.vb</DependentUpon>
@@ -134,6 +145,9 @@
     <EmbeddedResource Include="Employee Certificate.resx">
       <DependentUpon>Employee Certificate.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Employees List.resx">
+      <DependentUpon>Employees List.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Employees.resx">
       <DependentUpon>Employees.vb</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +171,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="HRappDataSet.xsc">
+      <DependentUpon>HRappDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="HRappDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>HRappDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="HRappDataSet.xss">
+      <DependentUpon>HRappDataSet.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
